# Booking-SaaS

./: pyproject.toml
alembic/: env.py
alembic/versions/: 5b60548ed812_create_users_table.py
app/: main.py
app/core/: config.py  logging.py
app/infra/db/models/: __init__.py  user.py
app/modules/auth/: service.py
app/modules/users/: dependencies.py  repository.py  routes.py  schemas.py  service.py
tests/: test_users_registry.py
