[project]
name = "booking-saas"
version = "0.1.0"
description = ""
authors = [
    { name = "Yevhenii Korniev", email = "korniev92@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.4,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"
ruff = "^0.15.0"
black = "^26.1.0"
mypy = "^1.19.1"
pre-commit = "^4.5.1"


[tool.pytest.ini_options]
pythonpath = ["."]
